--- a/app/src/main/res/layout/activity_fridge_list.xml
+++ b/app/src/main/res/layout/activity_fridge_list.xml
@@ -7,64 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".FridgeListActivity">
     
-    <ImageView
-        android:id="@+id/donutImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/default_margin"
-        android:layout_marginRight="@dimen/default_margin"
-        android:layout_marginTop="@dimen/default_margin"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:srcCompat="@drawable/donut_circle"/>
-
-    <ImageView
-        android:id="@+id/iceCreamImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/default_margin"
-        android:layout_marginRight="@dimen/default_margin"
-        android:layout_marginTop="@dimen/default_margin"
-        app:layout_constraintTop_toBottomOf="@id/donutImg"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:srcCompat="@drawable/icecream_circle"/>
-
-    <ImageView
-        android:id="@+id/froyoImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/default_margin"
-        android:layout_marginRight="@dimen/default_margin"
-        android:layout_marginTop="@dimen/default_margin"
-        app:layout_constraintTop_toBottomOf="@id/iceCreamImg"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:srcCompat="@drawable/froyo_circle"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="@dimen/default_margin"
-        app:layout_constraintLeft_toRightOf="@id/donutImg"
-        app:layout_constraintTop_toTopOf="@id/donutImg"
-        android:text="@string/product_description" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="@dimen/default_margin"
-        app:layout_constraintLeft_toRightOf="@id/iceCreamImg"
-        app:layout_constraintTop_toTopOf="@id/iceCreamImg"
-        android:text="@string/product_description" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="@dimen/default_margin"
-        app:layout_constraintLeft_toRightOf="@id/froyoImg"
-        app:layout_constraintTop_toTopOf="@id/froyoImg"
-        android:text="@string/product_description" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
