--- a/app/src/main/res/layout/activity_fridge_list.xml
+++ b/app/src/main/res/layout/activity_fridge_list.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/layout_vertical_margin"
+    android:paddingLeft="@dimen/layout_horizontal_margin"
+    android:paddingRight="@dimen/layout_horizontal_margin"
+    android:paddingTop="@dimen/layout_vertical_margin"
     tools:context=".FridgeListActivity">
     
     <androidx.recyclerview.widget.RecyclerView
@@ -13,4 +17,4 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
