--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#00b894</color>
+    <color name="text_color">#2d3436</color>
+    <color name="text_color_secondary">#636e72</color>
+    <color name="background_color">#ecf0f1</color>
 </resources>
