--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,22 +19,21 @@
         android:textColor="@color/text_color"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewSubtitle"
-        android:layout_width="379dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:text="@string/welcome_message_subtitle"
         android:textColor="@color/text_color_secondary"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewWelcome" />
 
@@ -67,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#00b894"
+        android:backgroundTint="@color/button_background_color"
         android:text="@string/login"
         android:onClick="login"
         app:cornerRadius="16dp"
@@ -81,7 +80,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#00b894"
+        android:backgroundTint="@color/button_background_color"
         android:text="@string/register"
         android:onClick="register"
         app:cornerRadius="16dp"
@@ -95,7 +94,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#00b894"
+        android:backgroundTint="@color/button_background_color"
         android:text="@string/login_with_google"
         android:onClick="loginWithGoogle"
         app:cornerRadius="16dp"
@@ -109,7 +108,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:backgroundTint="#00b894"
+        android:backgroundTint="@color/button_background_color"
         android:text="@string/login_as_guest"
         android:onClick="loginAsGuest"
         app:cornerRadius="16dp"
