--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,66 +1,70 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    app:cardElevation="4dp"
+    app:cardCornerRadius="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/itemImage"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true" />
+            android:layout_height="200dp"
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/itemName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/itemImage"
-            android:padding="8dp"
-            android:text="@string/item_name_placeholder"
-            android:textColor="?android:textColorSecondary" />
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/text_color"
+            android:paddingTop="8dp" />
 
         <TextView
             android:id="@+id/itemExpirationDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/itemName"
-            android:padding="8dp"
-            android:text="@string/item_expiration_date_placeholder" />
+            android:textSize="14sp"
+            android:textColor="@color/text_color_secondary" />
 
         <LinearLayout
             android:id="@+id/buttonLayout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/itemExpirationDate"
-            android:layout_centerHorizontal="true"
             android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:gravity="center_horizontal">
 
             <Button
                 android:id="@+id/increaseAmountButton"
-                android:layout_width="wrap_content"
+                android:layout_width="55dp"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/button_background_color"
                 android:text="@string/increase_amount_btn" />
 
             <TextView
                 android:id="@+id/itemAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:text="@string/item_amount_placeholder" />
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/text_color"
+                android:paddingHorizontal="16dp" />
 
             <Button
                 android:id="@+id/decreaseAmountButton"
-                android:layout_width="wrap_content"
+                android:layout_width="55dp"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/button_background_color"
                 android:text="@string/decrease_amount_btn" />
         </LinearLayout>
-
-
     </RelativeLayout>
-
 </androidx.cardview.widget.CardView>
