--- a/app/src/main/res/menu/fridge_list_menu.xml
+++ b/app/src/main/res/menu/fridge_list_menu.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/searchBar"
-        android:title="Search"
+        android:title="@string/search"
         android:icon="@drawable/ic_search"
         app:showAsAction="ifRoom"
         app:actionViewClass="android.widget.SearchView" />
 
     <item
         android:id="@+id/viewSelector"
-        android:title="View"
+        android:title="@string/view"
         android:icon="@drawable/ic_view_grid"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/settingsBtn"
-        android:title="Settings"
+        android:title="@string/settings"
         app:showAsAction="never"
         android:orderInCategory="1" />
 
     <item
         android:id="@+id/logoutBtn"
-        android:title="Log out"
+        android:title="@string/log_out"
         app:showAsAction="never"
         android:orderInCategory="2"/>
 
