--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/main"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/background_color"
     tools:context=".RegisterActivity">
 
@@ -43,6 +47,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:hint="@string/username"
+        android:textColor="@color/text_color_secondary"
+        android:textColorHint="@color/text_color_secondary"
         android:inputType="textPersonName"
         app:layout_constraintTop_toBottomOf="@id/textViewRegisterSubtitle"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +61,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="@string/email_address"
+        android:textColor="@color/text_color_secondary"
+        android:textColorHint="@color/text_color_secondary"
         android:inputType="textEmailAddress"
         app:layout_constraintTop_toBottomOf="@id/editTextRegisterUsername"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,6 +75,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="@string/password"
+        android:textColor="@color/text_color_secondary"
+        android:textColorHint="@color/text_color_secondary"
         android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@id/editTextRegisterEmail"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,6 +89,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:hint="@string/confirm_password"
+        android:textColor="@color/text_color_secondary"
+        android:textColorHint="@color/text_color_secondary"
         android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@id/editTextRegisterPassword"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,6 +102,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:textColor="@color/text_color_secondary"
         app:layout_constraintTop_toBottomOf="@id/editTextRegisterPasswordConfirm"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -126,3 +139,4 @@
             android:layout_marginStart="16dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
