--- a/app/src/main/res/layout/activity_fridge_list.xml
+++ b/app/src/main/res/layout/activity_fridge_list.xml
@@ -17,4 +17,15 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/add_black"
+        app:backgroundTint="@color/button_background_color" />
+
+
 </RelativeLayout>
