--- a/app/src/main/res/menu/fridge_list_menu.xml
+++ b/app/src/main/res/menu/fridge_list_menu.xml
@@ -26,4 +26,10 @@
         app:showAsAction="never"
         android:orderInCategory="2"/>
 
+    <item
+        android:id="@+id/addItem"
+        android:title="@string/add_item"
+        android:icon="@drawable/add_black"
+        app:showAsAction="ifRoom"/>
+
 </menu>
