--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths>
-    <external-files-path name="images" path="Pictures" />
-    <external-path name="external_files" path="." />
+<paths xmlns:android="http://schemas.android.com/apk/res/android">
+    <external-files-path
+        name="my_images"
+        path="Pictures/" />
+    <external-path
+        name="external_files"
+        path="." />
+    <cache-path
+        name="cache"
+        path="." />
 </paths>
