--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -16,7 +16,7 @@
             android:layout_marginTop="16dp"
             android:background="#DFDFDF"
             android:scaleType="centerCrop"
-            android:src="@drawable/apple"
+            android:src="@drawable/image_default"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -76,6 +76,16 @@
             android:layout_height="wrap_content"
             android:text="@string/save"
             app:layout_constraintTop_toBottomOf="@id/editTextExpirationDate" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/buttonSaveItem"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
